--- a/empty-project/build.gradle
+++ b/empty-project/build.gradle
@@ -15,12 +15,15 @@ buildscript {
 	}
 }
 
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'com.google.protobuf'
-apply plugin: 'idea'
+plugins {
+	id 'org.hidetake.swagger.generator' version '2.9.0'
+	id 'java'
+	id "org.jetbrains.kotlin.jvm" version "1.2.10"
+	id "org.jetbrains.kotlin.plugin.spring" version "1.2.10"
+	id 'org.springframework.boot' version '1.5.9.RELEASE'
+	id "com.google.protobuf" version "0.8.3"
+	id 'idea'
+}
 
 group = 'sbux.ucp'
 version = '0.0.1-SNAPSHOT'
